--- a/index.html
+++ b/index.html
@@ -258,9 +258,9 @@
     </script>
 
     <div class="card">
-        <!-- <button class="music-btn" onclick="toggleMusic()">
+        <button class="music-btn" onclick="toggleMusic()">
             🎵
-        </button> -->
+        </button>
         <audio id="bgm" loop>
             <source src="audio.mp3" type="audio/mpeg">
         </audio>
@@ -335,9 +335,6 @@ hãy nhớ rằng vẫn có một người luôn âm thầm thương em hơn em 
                 music.pause();
             }
         }
-        const music = document.getElementById("bgm");
-        music.play();
-
     </script>
 
 </body>
